<resources>
    <string name="roomkit_input_can_not_empty">input can\'t be empty!</string>
    <string name="roomkit_create_room">Create room</string>
    <string name="roomkit_enter_room_id">Enter roomID</string>
    <string name="roomkit_room_type_freedom_speaker">Freedom speaker room</string>
    <string name="roomkit_join_room">Join room</string>
    <string name="roomkit_room_type_stage_speaker">On-stage speaking room</string>
    <string name="roomkit_room_id">Room ID</string>
    <string name="roomkit_room_type">Room type</string>
    <string name="roomkit_start_video">Start video</string>
    <string name="roomkit_stop_video">Stop video</string>
    <string name="roomkit_your_name">Your name</string>
    <string name="roomkit_enable_speaker">Enable speaker</string>
    <string name="roomkit_enable_audio">Enable audio</string>
    <string name="roomkit_enable_video">Enable video</string>
    <string name="roomkit_mute">Mute</string>
    <string name="roomkit_unmute">Unmute</string>
    <string name="roomkit_end">End</string>
    <string name="roomkit_member_count">Members(%s)</string>
    <string name="roomkit_member">Members</string>
    <string name="roomkit_expand">Expansion</string>
    <string name="roomkit_user_room">%s\'s room</string>
    <string name="roomkit_user_webinar_room">%s\'s webinar room</string>
    <string name="roomkit_screen_share">Screen share</string>
    <string name="roomkit_mute_all_audio">Mute all</string>
    <string name="roomkit_unmute_all_audio">Unmute all</string>
    <string name="roomkit_more">More</string>
    <string name="roomkit_search_members">Search members</string>
    <string name="roomkit_invite">Invite</string>
    <string name="roomkit_role_owner">Owner</string>
    <string name="roomkit_role_admin">Administrator</string>
    <string name="roomkit_me">Me</string>
    <string name="roomkit_room_link">Room link</string>
    <string name="roomkit_copy">Copy</string>
    <string name="roomkit_copy_room_info">Copy room info</string>
    <string name="roomkit_msg_all_members_will_be_muted">All current and incoming members will be muted</string>
    <string name="roomkit_msg_all_members_video_disabled">All current and incoming members will be restricted from video</string>
    <string name="roomkit_msg_members_cannot_unmute">Members will unable to turn on the microphone</string>
    <string name="roomkit_msg_members_cannot_start_video">Members will unable to turn on video</string>
    <string name="roomkit_confirm">Confirm</string>
    <string name="roomkit_cancel">Cancel</string>
    <string name="roomkit_disable_all_video">Stop all video</string>
    <string name="roomkit_enable_all_video">Enable all video</string>
    <string name="roomkit_msg_all_members_will_be_unmuted">All members will be unmuted</string>
    <string name="roomkit_msg_members_can_unmute">Members will be able to turn on the microphone</string>
    <string name="roomkit_confirm_release">Confirm release</string>
    <string name="roomkit_msg_all_members_video_enabled">All members will not be restricted from video</string>
    <string name="roomkit_msg_members_can_start_video">Members will be able to turn on video</string>
    <string name="roomkit_toast_all_video_disabled">Participants\' video off. Camera access disabled.</string>
    <string name="roomkit_toast_all_video_enabled">Participants can now start video.</string>
    <string name="roomkit_toast_all_audio_disabled">Participants muted. Mic access disabled.</string>
    <string name="roomkit_toast_all_audio_enabled">Participants can now unmute themselves.</string>
    <string name="roomkit_modify_name">Modify the name</string>
    <string name="roomkit_request_unmute_audio">Ask to unmute</string>
    <string name="roomkit_request_start_video">Ask to start video</string>
    <string name="roomkit_transfer_owner">Make host</string>
    <string name="roomkit_set_admin">Set as administrator</string>
    <string name="roomkit_revoke_admin">Undo administrator</string>
    <string name="roomkit_mute_text_chat">Mute message</string>
    <string name="roomkit_unmute_text_chat">Unmute message</string>
    <string name="roomkit_remove_member">Remove</string>
    <string name="roomkit_msg_transfer_owner_to">Transfer the host to %s</string>
    <string name="roomkit_msg_transfer_owner_tip">After transfer the host you will become a general user</string>
    <string name="roomkit_confirm_transfer">Confirm transfer</string>
    <string name="roomkit_toast_you_are_owner">You are now a host</string>
    <string name="roomkit_toast_owner_transferred">The host has been transferred to %s</string>
    <string name="roomkit_toast_you_are_admin">You have become a conference admin</string>
    <string name="roomkit_toast_admin_set">%s has been set as conference admin</string>
    <string name="roomkit_toast_admin_revoked">The conference admin status of %s has been withdrawn</string>
    <string name="roomkit_toast_you_are_no_longer_admin">Your conference admin status has been revoked</string>
    <string name="roomkit_toast_room_id_copied">Room ID copied</string>
    <string name="roomkit_toast_room_link_copied">Room link copied</string>
    <string name="roomkit_toast_room_info_copied">Room information copied successfully</string>
    <string name="roomkit_leave_room">Leave room</string>
    <string name="roomkit_end_room">End room</string>
    <string name="roomkit_toast_room_ended">Room ended</string>
    <string name="roomkit_confirm_leave_room_by_genera_user">Are you sure you want to leave the room</string>
    <string name="roomkit_confirm_leave_room_by_owner">If you don\'t want to end the conference, \n please assign a new host before leaving the conference</string>
    <string name="roomkit_confirm_remove_member">Do you want to remove %s from the room?</string>
    <string name="roomkit_ok">OK</string>
    <string name="roomkit_toast_room_closed">The room was closed.</string>
    <string name="roomkit_toast_you_were_removed">You were removed from the room by the host.</string>
    <string name="roomkit_toast_audio_invite_sent">The audience has been invited to open the audio</string>
    <string name="roomkit_toast_video_invite_sent">The audience has been invited to open the video</string>
    <string name="roomkit_toast_text_chat_disabled">You have been banned from text chat</string>
    <string name="roomkit_toast_text_chat_enabled">You are allowed to text chat</string>
    <string name="roomkit_msg_invite_unmute_audio">%s invites you to turn on the microphone</string>
    <string name="roomkit_msg_invite_start_video">%s invites you to turn on the camera</string>
    <string name="roomkit_agree">Agree</string>
    <string name="roomkit_reject">Reject</string>
    <string name="roomkit_toast_camera_closed_by_host">Your camera has been disabled by %s</string>
    <string name="roomkit_toast_muted_by_host">Your microphone has been disabled by %s</string>
    <string name="roomkit_enter_nickname">Enter nickname</string>
    <string name="roomkit_tip_all_muted_cannot_unmute">Muted by host. Unmute disabled.</string>
    <string name="roomkit_tip_all_video_off_cannot_start">All on mute video unable to turn on camera</string>
    <string name="roomkit_room_name">Room name</string>
    <string name="roomkit_participant">Participant(%s)</string>
    <string name="roomkit_audience">Audience(%s)</string>
    <string name="roomkit_entered_room">Entered room</string>
    <string name="roomkit_switch_to_participant">%s has been set as a participant</string>
    <string name="roomkit_switch_to_audience">%s has been set as an audience</string>
    <string name="roomkit_switch_to_participant_byself">You have been set as a participant</string>
    <string name="roomkit_switch_to_audience_byself">You have been set as an audience</string>
    <string name="roomkit_set_participant">Set as participant</string>
    <string name="roomkit_set_audience">Set as audience</string>
    <string name="roomkit_transcription_open_subtitle">Turn On AI Subtitles</string>
    <string name="roomkit_transcription_open_minutes">View AI Meeting Minutes</string>
    <string name="roomkit_transcription_close_subtitle">Turn Off AI Subtitles</string>
    <string name="roomkit_transcription_close_minutes">Turn Off AI Meeting Minutes</string>
    <string name="roomkit_transcription_ai_minutes_title">AI Meeting Minutes</string>
    <string name="roomkit_transcription_enable_first">Please enable AI transcription first</string>
    <string name="roomkit_transfer_host_with_asr_warning">After transferring room ownership, you will become a general member. Real-time Subtitles and AI Meeting Minutes will stop and must be re-enabled by the new host.</string>
    <string name="roomkit_transcription_ai_tools">AI Tools</string>
    <string name="roomkit_transcription_recording">Recording...</string>
    <string name="roomkit_transcription_ai_subtitle_placeholder">AI Real-time Subtitles</string>
    <string name="roomkit_transcription_ai_subtitle_settings">AI Subtitle Settings</string>
    <string name="roomkit_transcription_recognition_and_translation">Recognition and Translation Settings</string>
    <string name="roomkit_transcription_identify_language">Identify language</string>
    <string name="roomkit_transcription_owner_only_modify_language">Only allow owner to modify identify language</string>
    <string name="roomkit_transcription_owner_changed_source_language">Owner changed subtitle identify language</string>
    <string name="roomkit_transcription_translate_language">Translate language</string>
    <string name="roomkit_transcription_bilingual_subtitle">Show Bilingual Subtitles</string>
    <string name="roomkit_transcription_select_recognition_language">Please Select Recognition Language</string>
    <string name="roomkit_transcription_auto_detect_chinese_english">Auto-detect (Chinese/English)</string>
    <string name="roomkit_transcription_speaking_chinese">Speaking Chinese</string>
    <string name="roomkit_transcription_speaking_english">Speaking English</string>
    <string name="roomkit_transcription_speaking_cantonese">Speaking Cantonese</string>
    <string name="roomkit_transcription_speaking_vietnamese">Speaking Vietnamese</string>
    <string name="roomkit_transcription_speaking_japanese">Speaking Japanese</string>
    <string name="roomkit_transcription_speaking_korean">Speaking Korean</string>
    <string name="roomkit_transcription_speaking_indonesian">Speaking Indonesian</string>
    <string name="roomkit_transcription_speaking_thai">Speaking Thai</string>
    <string name="roomkit_transcription_speaking_portuguese">Speaking Portuguese</string>
    <string name="roomkit_transcription_speaking_turkish">Speaking Turkish</string>
    <string name="roomkit_transcription_speaking_arabic">Speaking Arabic</string>
    <string name="roomkit_transcription_speaking_spanish">Speaking Spanish</string>
    <string name="roomkit_transcription_speaking_hindi">Speaking Hindi</string>
    <string name="roomkit_transcription_speaking_french">Speaking French</string>
    <string name="roomkit_transcription_speaking_malay">Speaking Malay</string>
    <string name="roomkit_scheduled_room_name">Room name</string>
    <string name="roomkit_scheduled_room_id">RoomId</string>
    <string name="roomkit_scheduled_start_time">Start time</string>
    <string name="roomkit_scheduled_duration">Room Duration</string>
    <string name="roomkit_scheduled_room_host">Creator</string>
    <string name="roomkit_scheduled_attendees">Participants</string>
    <string name="roomkit_scheduled_room_detail">Room details</string>
    <string name="roomkit_room_password_title">Room Password</string>
    <string name="roomkit_scheduled_enter_room">Enter room</string>
    <string name="roomkit_scheduled_invite_members">Invite members</string>
    <string name="roomkit_scheduled_cancel_room">Cancel room</string>
</resources>